--- a/stack.yaml
+++ b/stack.yaml
@@ -20,7 +20,7 @@
 resolver: lts-14.16
 
 ghc-options:
-  "*": -Wall -Werror
+  "*": -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -42,7 +42,10 @@ packages:
 # - git: https://github.com/commercialhaskell/stack.git
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 #
-# extra-deps: []
+extra-deps: 
+  - haskell-lsp-0.18.0.0
+  - haskell-lsp-types-0.18.0.0
+  - hie-bios-0.2.1
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
